# pmq

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  glama.json  llms.txt  pyproject.toml  server.json
.githooks/: pre-push
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  production-receipt.yml
.github/workflows/: canary.yml  codeql.yml  mcp-publish.yml  publish.yml  scorecard.yml  test.yml
bot-template/: README.md  bot.py  pmq-bot.service  strategy.py
bot-template/dash/: bot_dash.py  dash.html
docs/: comparison.md  demo.html  recipes.md  rounding-study.md  stability.md  war-story.md
examples/: fak_buy_guarded.py  read_market.py
src/pmq/: __init__.py  data.py  doctor.py  exceptions.py  executor.py  mcp.py  stream.py
tests/: test_book_fuzz.py  test_canary_live.py  test_data.py  test_doctor.py  test_executor.py  test_fill_fuzz.py  test_mcp.py  test_stream.py  test_template_engine.py
