[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmquant"
version = "0.4.1"
description = "Fail-closed execution and market-data layer for Polymarket CLOB V2: local signing, confirmed fills only, fee-correct math, working deposit-wallet (POLY_1271) support."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "crp4222" }]
requires-python = ">=3.10"
dependencies = ["py-clob-client-v2>=1.0.2,<2"]
keywords = [
    "polymarket", "clob", "clob-v2", "prediction-markets", "trading",
    "execution", "market-order", "fak", "builder-code", "deposit-wallet",
    "poly-1271", "orderbook", "quant",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/crp4222/pmq"
Issues = "https://github.com/crp4222/pmq/issues"

[project.optional-dependencies]
mcp = ["mcp>=1.2"]
dev = ["pytest>=8", "pytest-cov>=5", "mcp>=1.2", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
pmq-mcp = "pmq.mcp:main"
pmq-doctor = "pmq.doctor:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pmq"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/pmq"]

[[tool.mypy.overrides]]
module = ["py_clob_client_v2.*", "eth_account.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
